title alignment fix

--- a/style.css
+++ b/style.css
@@ -402,6 +402,7 @@ html {
     }
     .hero-title{
         font-size:50px;
+        text-align:center;
     }
 }
 
